<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Appointment">

    <TextView
        android:id="@+id/tv_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_appointment"
        android:layout_marginStart="130dp"
        android:layout_marginBottom="5dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="333dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="263dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_appointment_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment_doc"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/et_appointment_doc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/hint_name"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/appointment_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/appointment_date"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/et_appointment_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_date"
                android:focusable="false"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />

            <TextView
                android:id="@+id/tv_appointment_time"
                android:text="@string/appointment_time"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />

            <EditText
                android:id="@+id/et_appointment_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ems="10"
                android:hint="@string/hint_time"
                android:focusable="false"
                android:layout_marginLeft="5dp"
                android:layout_marginBottom="5dp"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="263dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/png_hospital"
                android:layout_width="match_parent"
                android:layout_height="173dp"
                android:layout_marginTop="30dp"
                app:srcCompat="@drawable/hospital" />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/bt_appointment"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Button"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="5dp"
        />

    <TextView
        android:id="@+id/result_display"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

</LinearLayout>