<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Medicine_Reminder">

    <TextView
        android:id="@+id/tv_set_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:text="@string/Reminder" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="161dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="198dp"
            android:layout_height="146dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:text="@string/reminder_med" />

            <EditText
                android:id="@+id/et_med_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:minHeight="48dp"
                android:hint="@string/hint_med" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="146dp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/time_png"
                android:layout_width="175dp"
                android:layout_height="146dp"
                app:srcCompat="@drawable/time" />
        </LinearLayout>
    </LinearLayout>

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginStart="100dp"
        android:gravity="center"
        >

    </TimePicker>

    <Button
        android:id="@+id/bt_add_reminder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/bt_reminder" />

</LinearLayout>